Fix z-index (bug 869426)

--- a/hearth/media/css/listing.styl
+++ b/hearth/media/css/listing.styl
@@ -588,7 +588,7 @@ ratings-sidebar() {
             position: absolute;
             top: 0;
             width: 50%;
-            z-index:10;
+            z-index: 5;
         }
         &:before {
             // dotted gets rid of strange edge rendering in b2g.
